--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </style>
 </head>
 <body>
-        <div class="language-selector"> <a href="index.html" class="active">English</a><a href="fr.html">Français</a>
+        <div class="language-selector"> <a href="#" class="active">English</a><a href="fr">Français</a>
         </div>
     <div class="checkout-container">
         <div class="payment-details">
