--- a/fr.html
+++ b/fr.html
@@ -54,7 +54,7 @@
 </head>
 <body>
     <div class="language-selector">
-        <a href="index.html">English</a> <a href="fr.html" class="active">Français</a>
+        <a href="https://pay.lamaisonblanche.ca">English</a> <a href="#" class="active">Français</a>
     </div>
     <div class="checkout-container">
         <div class="payment-details">
