--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="amount">Pay CA$500</div>
             </div>
 
-            <a href="#" class="interac-btn">
+            <a href="interac-e-transfer.html" class="interac-btn">
                  <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/Interac_Brand_2021.png" width="25" height="25">
                  E-Transfer
             </a>
