--- a/fr.html
+++ b/fr.html
@@ -63,7 +63,7 @@
                 <div class="amount">Payer 500 $ CA</div>
             </div>
 
-            <a href="#" class="interac-btn">
+            <a href="interac-e-transferFR.html" class="interac-btn">
                  <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/Interac_Brand_2021.png" width="25" height="25">
                  E-Transfer
             </a>
