--- a/interac-e-transfer.html
+++ b/interac-e-transfer.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+    <script src="https://www.google.com/recaptcha/enterprise.js?render=6LeFH-grAAAAAO7A1bULu8X4s86HHts4BgWlf9nJ"></script>
 </head>
 <body>
 
