--- a/fr.html
+++ b/fr.html
@@ -6,6 +6,7 @@
     <title>Dépôt de sécurité - Paiement</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
+    <script src="https://www.google.com/recaptcha/enterprise.js?render=6LeFH-grAAAAAO7A1bULu8X4s86HHts4BgWlf9nJ"></script>
 
     <style>
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; background-color: #f6f9fc; display: flex; justify-content: center; align-items: center; min-height: 100vh; margin: 0; padding: 20px; color: #333; }
@@ -115,7 +116,7 @@
                 <button id="submit" class="submit-btn">Payer</button>
                 
                 <p class="footer-text">
-                    Propulsé par <strong>PayDirect</strong>
+                    Propulsé par <strong>AWS</strong>
                 </p>
             </form>
         </div>
