--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Security Deposit Checkout</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
-
+    <script src="https://www.google.com/recaptcha/enterprise.js?render=6LeFH-grAAAAAO7A1bULu8X4s86HHts4BgWlf9nJ"></script>
     <style>
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; background-color: #f6f9fc; display: flex; justify-content: center; align-items: center; min-height: 100vh; margin: 0; padding: 20px; color: #333; }
         .checkout-container { display: flex; width: 100%; max-width: 900px; background-color: #fff; border-radius: 8px; box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); overflow: hidden; }
@@ -112,9 +112,8 @@
                 <div id="error-message" class="error-message"></div>
 
                 <button id="submit" class="submit-btn">Pay</button>
-                
                 <p class="footer-text">
-                    Powered by <strong>PayDirect</strong>
+                    Propulsé par <strong>AWS</strong>
                 </p>
             </form>
         </div>
