--- a/en.html
+++ b/en.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- Powered by QADS Pay -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -119,7 +120,7 @@
 
                 <button id="submit" class="submit-btn">Pay</button>
                 <p class="footer-text">
-                    Propulsé par <strong>AWS</strong>
+                    Powered by <strong>QADS Pay</strong>
                 </p>
             </form>
         </div>
