--- a/fr.html
+++ b/fr.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+<!-- Developped by QADS.cloud -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -119,6 +120,9 @@
                 <div id="error-message" class="error-message"></div>
                 <button id="submit" class="submit-btn">Payer</button>
             </form>
+            <p class="footer-text">
+                Propulsé par <strong>QADS Pay</strong>
+            </p>
         </div>
 
         <div class="order-summary">
