--- a/interac-e-transferFR.html
+++ b/interac-e-transferFR.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+<!-- Powered by QADS Pay -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
