--- a/macbookairlaptop.html
+++ b/macbookairlaptop.html
@@ -15,11 +15,11 @@
     </style>
 </head>
 <body class=" text-white min-h-screen flex flex-col items-center justify-center p-8">
-    <h1 class="text-8xl md:text-9xl font-extrabold mb-12 text-center text-green-400">
+    <h1 class="text-8xl md:text-9xl font-extrabold mb-12 text-center text-black-400">
         tiny url.bitch - free porn
     </h1>
     <!-- Big "hello" text -->
-    <h1 class="text-8xl md:text-9xl font-extrabold mb-12 text-center text-green-400">
+    <h1 class="text-8xl md:text-9xl font-extrabold mb-12 text-center text-black-400">
         free porn free porn free porn free porn
     </h1>
 
