--- a/en.html
+++ b/en.html
@@ -63,13 +63,16 @@
                 <div class="amount">Pay CA$500</div>
             </div>
 
-            <a href="interac-e-transfer.html" class="interac-btn">
+            <!--
+            Interac is not available
+             <a href="interac-e-transferFR.html" class="interac-btn">
                  <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/Interac_Brand_2021.png" width="25" height="25">
                  E-Transfer
             </a>
+            -->
 
             <div class="separator">
-                <span class="separator-text">Or pay with card</span>
+                <span class="separator-text">Pay with card</span>
             </div>
             
             <form id="payment-form">
