--- a/fr.html
+++ b/fr.html
@@ -64,13 +64,15 @@
                 <div class="amount">Payer 500 $ CA</div>
             </div>
 
-            <a href="interac-e-transferFR.html" class="interac-btn">
+            <!--
+            Interac is not available
+             <a href="interac-e-transferFR.html" class="interac-btn">
                  <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/Interac_Brand_2021.png" width="25" height="25">
                  E-Transfer
             </a>
-
+            -->
             <div class="separator">
-                <span class="separator-text">Ou payer par carte</span>
+                <span class="separator-text">Payer par carte</span>
             </div>
             
             <form id="payment-form">
