--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <meta http-equiv="refresh" content="0; url=https://identitycheck.lamaisonblanche.ca">
 </head>
 <body>
-  <p>If you are not redirected automatically, <a href="https://identitycheck.lamaisonblanche.ca">click here</a>.</p>
+  <p>If you are not redirected automatically, <a href="https://pay.lamaisonblanche.ca/fr.html">click here</a>.</p>
 </body>
 </html>
