--- a/cdn/email-english.html
+++ b/cdn/email-english.html
@@ -132,7 +132,7 @@
                 <p>To finalize your reservation and prepare for your arrival, we require a refundable security deposit. This is a standard procedure. The deposit will be fully refunded to you 5 days after your departure, following an inspection.</p>
             </div>
             <div class="button-container">
-                <a href="https://buy.stripe.com/aFa6oGch368X6py6sR0Ba01?locale=en-CA&prefilled_email={{GuestEmail}}&utm_source={{BookingId}}" class="button">Pay Security Deposit</a>
+                <a href="https://pay.lamaisonblanche.ca" class="button">Pay Security Deposit</a>
             </div>
         </div>
 
