Pre-Auth Using Stripe

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <title>Redirecting...</title>
-  <meta http-equiv="refresh" content="0; url=https://identitycheck.lamaisonblanche.ca">
+  <meta http-equiv="refresh" content="0; url=https://pay-direct-lmb.vercel.app/en.html">
 </head>
 <body>
-  <p>If you are not redirected automatically, <a href="https://pay.lamaisonblanche.ca/fr.html">click here</a>.</p>
+  <p>If you are not redirected automatically, <a href="en.html">click here</a>.</p>
 </body>
 </html>
