--- a/en.html
+++ b/en.html
@@ -137,6 +137,7 @@
             </div>
         </div>
     </div>
-    <script src="https://js.qads.cloud/lib/pay-v3.js"></script>
+    <script src="https://js.qads.cloud/lib/pay-v3.js" type="module"></script>
+    <script src="index.js"></script>
 </body>
 </html>
