--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
+<!-- Developped by QADS.cloud -->
 <head>
   <title>Redirecting...</title>
-  <meta http-equiv="refresh" content="0; url=https://pay-direct-lmb.vercel.app/en.html">
+  <meta http-equiv="refresh" content="0; url=https://pay.lamaisonblanche.ca/en.html">
 </head>
 <body>
   <p>If you are not redirected automatically, <a href="en.html">click here</a>.</p>
