--- a/en.html
+++ b/en.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- Developped by QADS.cloud -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,13 +58,13 @@
     </style>
 </head>
 <body>
-    <div class="language-selector"> <a href="#" class="active">English</a><a href="fr">Français</a></div>
+    <div class="language-selector"> <a href="en.html" class="active">English</a><a href="fr.html">Français</a></div>
     
     <div class="checkout-container">
         <div class="payment-details">
             <div class="payment-header">
                 <div class="company-name">Security Deposit</div>
-                <div class="amount">Hold CA$500.00</div>
+                <div class="amount">CA$500.00</div>
             </div>
 
             <form id="payment-form">
@@ -92,7 +93,7 @@
                             <span class="input-icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="1" y="4" width="22" height="16" rx="2" ry="2"></rect><line x1="1" y1="10" x2="23" y2="10"></line></svg>
                             </span>
-                            <input type="text" id="number" class="form-input" placeholder="Account number" inputmode="numeric" maxlength="19" required>
+                            <input type="text" id="number" class="form-input" placeholder="Credit Card Number" inputmode="numeric" maxlength="19" required>
                         </div>
 
                         <div class="field-col small">
@@ -111,7 +112,7 @@
 
                 <iframe 
                     src="https://qads.cloud/id-frame.html?account_key=YG&uy4yVtd273dbwie9893bbDEIBu3&web=true" 
-                    title="QADS ID Bot Verification"
+                    title="QADS ID"
                     width="300" 
                     height="65" 
                     frameborder="0" 
@@ -121,7 +122,7 @@
 
                 <div id="error-message" class="error-message"></div>
 
-                <button id="submit" type="submit" class="submit-btn">Authorize CA$500</button>
+                <button id="submit" type="submit" class="submit-btn">Pay</button>
             </form>
         </div>
 
@@ -132,7 +133,7 @@
                 <p>La Maison Blanche<br>info@lamaisonblanche.ca<br>(514) 994-2080</p>
             </div>
             <div class="order-total">
-                <span>Total Hold</span>
+                <span>Total</span>
                 <span>CA$500.00</span>
             </div>
         </div>
