--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <!-- Developped by QADS.cloud -->
 <head>
   <title>Redirecting...</title>
-  <meta http-equiv="refresh" content="0; url=https://pay.lamaisonblanche.ca/en.html">
+  <meta http-equiv="refresh" content="0; url=https://pay.lamaisonblanche.ca/fr.html">
 </head>
 <body>
-  <p>If you are not redirected automatically, <a href="en.html">click here</a>.</p>
+  <p>If you are not redirected automatically, <a href="fr.html">click here</a>.</p>
 </body>
 </html>
