--- a/en.html
+++ b/en.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/utils.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/validator/13.11.0/validator.min.js"></script>
     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
-
+    
     <style>
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; background-color: #f6f9fc; display: flex; justify-content: center; align-items: center; min-height: 100vh; margin: 0; padding: 20px; color: #333; }
         * { box-sizing: border-box; }
@@ -25,8 +25,8 @@
         .form-row { position: relative; border-bottom: 1px solid #e6e6e6; height: 52px; min-height: 52px; display: flex; align-items: center; background: #fff; }
         .form-row:first-child { border-top-left-radius: 6px; border-top-right-radius: 6px; }
         .form-row:last-child { border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-bottom: none; }
-        .input-icon { position: absolute; left: 14px; top: 50%; transform: translateY(-50%); color: #888; pointer-events: none; z-index: 10; display: flex; align-items: center; justify-content: center; height: 100%; }
-        .form-input { width: 100%; height: 100%; border: none; padding: 0 15px 0 45px; font-size: 16px; outline: none; color: #333; background: transparent; border-radius: 0; line-height: 52px; }
+        .input-icon { position: absolute; left: 10px; top: 50%; transform: translateY(-50%); color: #888; pointer-events: none; z-index: 10; display: flex; align-items: center; justify-content: center; height: 100%; }
+        .form-input { width: 100%; height: 100%; border: none; padding: 0 15px 0 44px; font-size: 16px; outline: none; color: #333; background: transparent; border-radius: 0; line-height: 52px; }
         .form-row:first-child .form-input { border-top-left-radius: 6px; border-top-right-radius: 6px; }
         .form-row:last-child .form-input { border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; }
         .form-input::placeholder { color: #aab7c4; opacity: 1; }
@@ -39,7 +39,7 @@
         .split-row { display: flex; width: 100%; height: 52px; align-items: stretch; }
         .field-col { position: relative; height: 100%; display: flex; align-items: center; }
         .field-col.big { flex: 2; min-width: 0; }
-        .field-col.small { flex: 1; border-left: 1px solid #e6e6e6; min-width: 0; }
+        .field-col.small { flex: 1; border-left: none; min-width: 0; }
         .submit-btn { width: 100%; padding: 14px; background-color: #000; color: white; border: none; border-radius: 6px; font-size: 1rem; font-weight: bold; cursor: pointer; margin-top: 25px; transition: opacity 0.3s ease; }
         .submit-btn:hover { background-color: #333; }
         .submit-btn:disabled { background-color: #555; cursor: not-allowed; opacity: 0.7; }
@@ -51,6 +51,7 @@
         .language-selector a { color: #333; text-decoration: none; margin: 0 5px; font-size: 0.9rem; }
         .language-selector a.active { text-decoration: underline; }
         .country-text { font-size: 0.85rem; color: #666; margin-top: 12px; line-height: 1.4; }
+        .card-brand-logo { height: 26px; width: auto; display: block; transition: opacity 0.3s ease-in-out; opacity: 1; }
         @media (max-width: 768px) {
             .checkout-container { flex-direction: column-reverse; overflow: visible; }
             .payment-details, .order-summary { padding: 25px; }
@@ -91,9 +92,9 @@
                     <div class="form-row split-row">
                         <div class="field-col big">
                             <span class="input-icon">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="1" y="4" width="22" height="16" rx="2" ry="2"></rect><line x1="1" y1="10" x2="23" y2="10"></line></svg>
+                                <img id="card-brand-icon" src="logo1.png" alt="Card" class="card-brand-logo">
                             </span>
-                            <input type="text" id="number" class="form-input" placeholder="Credit Card Number" inputmode="numeric" maxlength="19" required>
+                            <input type="text" id="number" class="form-input" placeholder=" Credit Card Number" inputmode="numeric" maxlength="19" required>
                         </div>
 
                         <div class="field-col small">
@@ -138,7 +139,6 @@
             </div>
         </div>
     </div>
-    <script src="https://js.qads.cloud/lib/pay-v3.js" type="module"></script>
     <script src="index.js"></script>
 </body>
 </html>
