--- a/fr.html
+++ b/fr.html
@@ -108,7 +108,8 @@
                     </div>
 
                 <p class="country-text">
-                    Ceci est une pré-authorization. 
+                    Ceci est une pré-authorization de 500$CA. 
+
                 </p>
 
                 <iframe 
@@ -130,7 +131,7 @@
         <div class="order-summary">
             <div class="order-item">
                 <p>Vous allez être remboursé 5 jours après votre séjour, suite à une inspection.</p>
-                <p><a href="https://lamaisonblanche.ca/terms-depot" style="color: #333; text-decoration: underline;">Deposit Conditions</a></p>
+                <p><a href="https://lamaisonblanche.ca/terms-depot" style="color: #333; text-decoration: underline;">Conditions du dépôt</a></p>
                 <p>La Maison Blanche<br>info@lamaisonblanche.ca<br>(514) 994-2080</p>
             </div>
             <div class="order-total">
