--- a/fr.html
+++ b/fr.html
@@ -59,8 +59,7 @@
     </style>
 </head>
 <body>
-    <div class="language-selector"> <a href="en.html" class="active">English</a><a href="fr.html">Français</a></div>
-    
+    <div class="language-selector"> <a href="en.html">English</a><a href="fr.html" class="active">Français</a></div>
     <div class="checkout-container">
         <div class="payment-details">
             <div class="payment-header">
