--- a/fr.html
+++ b/fr.html
@@ -123,7 +123,7 @@
 
                 <div id="error-message" class="error-message"></div>
 
-                <button id="submit" type="submit" class="submit-btn">Pay</button>
+                <button id="submit" type="submit" class="submit-btn">Payer</button>
             </form>
         </div>
 
