--- a/en.html
+++ b/en.html
@@ -108,7 +108,7 @@
                     </div>
 
                 <p class="country-text">
-                    This is a temporary hold. Funds will be released within 5 days of checkout pending inspection.
+                    This is a temporary hold. <a href="info.html">See more</a>
                 </p>
 
                 <iframe 
