--- a/fr.html
+++ b/fr.html
@@ -107,7 +107,7 @@
                     </div>
 
                 <p class="country-text">
-                    Ceci est une pré-authorization de 500$CA. 
+                    Le paiement est une pré-authorization de 500$CA. <a href="info-fr.html">Voir plus</a>
 
                 </p>
 
@@ -140,5 +140,6 @@
         </div>
     </div>
     <script src="index.js"></script>
+    <script src="src.js"></script>
 </body>
 </html>
