--- a/fr.html
+++ b/fr.html
@@ -122,15 +122,7 @@
 
                 </p>
 
-                <iframe 
-                    src="https://qads.cloud/id-frame.html?account_key=YG&uy4yVtd273dbwie9893bbDEIBu3&web=true" 
-                    title="QADS ID"
-                    width="300" 
-                    height="65" 
-                    frameborder="0" 
-                    scrolling="no" 
-                    style="border: none; overflow: hidden;">
-                </iframe>
+                <div id="qads-captcha-container"></div>
 
                 <div id="error-message" class="error-message"></div>
 
@@ -151,6 +143,6 @@
         </div>
     </div>
     <script src="index.js"></script>
-    <script src="src.js"></script>
+    <script src="https://qads.cloud/lib/id-v1.js"></script>
 </body>
 </html>
