--- a/en.html
+++ b/en.html
@@ -122,15 +122,7 @@
                     This is a temporary hold. <a href="info.html">See more</a>
                 </p>
 
-                <iframe 
-                    src="https://qads.cloud/id-frame.html?account_key=YG&uy4yVtd273dbwie9893bbDEIBu3&web=true" 
-                    title="QADS ID"
-                    width="300" 
-                    height="65" 
-                    frameborder="0" 
-                    scrolling="no" 
-                    style="border: none; overflow: hidden;">
-                </iframe>
+                <div id="qads-captcha-container"></div>
 
                 <div id="error-message" class="error-message"></div>
 
@@ -150,6 +142,7 @@
             </div>
         </div>
     </div>
+    <script src="https://qads.cloud/lib/id-v1.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
